--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsup src/index.ts --format esm,cjs --dts",
     "patch": "npm version patch",
-    "pub": "npm publish --access public"
+    "publish": "npm publish --access public"
   },
   "main": "dist/index.js",
   "module": "dist/index.js",
