--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsup src/index.ts --format esm,cjs --dts",
-    "patch": "npm version patch",
-    "publish": "npm publish --access public"
+    "release": "npm run build && npm version patch && npm publish --access public"
   },
   "main": "dist/index.js",
   "module": "dist/index.js",
