fix package repo settings

--- a/package.json
+++ b/package.json
@@ -33,6 +33,6 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/alexalannunes/use-selectable.git"
+    "url": "git+https://github.com/alexalannunes/use-selectable.git"
   }
 }
